# purpleman

./: CMakeLists.txt  README.md  c2_config.json  c2_contoller.cpp  c2_linuxcontroller.cpp  pown.cpp  pown_debug.txt  test_compile.cpp
docs/: HELP.md  NGROK_INTEGRATION.md  NGROK_SETUP.md
fake_include/: winsock2.h
include/cli/: console.h
include/config/: manager.h
include/implant/: manager.h  session.h
include/log/: logger.h
include/network/: client.h  manager.h  ngrok_client.h
include/usb/: manager.h
include/utils/: helpers.h
phising/: phising_compain.py  phising_payloadgen.cpp
src/cli/: console.cpp
src/config/: manager.cpp
src/implant/: manager.cpp
src/log/: logger.cpp
src/network/: client.cpp  manager.cpp  ngrok_client.cpp
src/usb/: manager.cpp
src/utils/: helpers.cpp
tests/: CMakeLists.txt  test_cli.cpp  test_config.cpp  test_logger.cpp  test_managers.cpp  test_utils.cpp
